--- a/ITBSS.html
+++ b/ITBSS.html
@@ -12,7 +12,7 @@
                 <a href="index.html"><img src="CS-removebg.png" alt="logo" class="logo"></a>
             </div>
                 <ul> 
-                    <li><a href="#index"><a href="index.html">Beranda</a></a></li>
+                    <li><a href="#beranda"><a href="index.html">Beranda</a></a></li>
                     <li><a href="#itbss"><a href="itbss.html" class="itbss">ITBSS</a></a></li>
                     <li>
                         <a href="#aboutme">About Me</a>
