--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <h1 class="preview-title" id="preview">Take a Look</h1>
                         
                     <ul class="preview-style">
-                        <li><a href="ITBSS.html"><img src="itbss.jpg" alt="itbss" class="itbss"><br>ITBSS</a></li>
+                        <li><a href="itbss.html"><img src="itbss.jpg" alt="itbss" class="itbss"><br>ITBSS</a></li>
                         <li><a href="bd.html"><img src="bd.jpg" alt="bd" class="bd"><br>Bisnis Digital</a></li>
                         <li><a href="biodata.html"><img src="foto.png" alt="me" class="me"><br>Biodata</a></li>
                     </ul><br>
